# Memory-management-system

./: CMakeLists.txt  README.md  final_log.txt  test_run.txt
demo video/: drive link.txt
src/: main.cpp
src/CLI/: cli.hpp
src/allocator/: memory.cpp  memory.hpp
src/cache/: cache.hpp
src/virtual memory/: virtual.hpp
